"almost home page completed"

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "axios": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "framer-motion": "^11.11.9",
+    "gatsby-plugin-image": "^3.13.1",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.453.0",
     "mongoose": "^8.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
